examples/test/testpolicy12774.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12774
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key23: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value47
          key42: value27
      podSelector:
        matchLabels:
          key10: value10
          key23: value32
